--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -2,7 +2,7 @@
 <h3>Home</h3>
 <h1>Dashboard</h1>
 
-<div>
+<div class="row">
     <?php if(isset($invoicelines_no_invoices[0])) { ?>
         <div class="col50">  
             <table>
