--- a/web/css/default.css
+++ b/web/css/default.css
@@ -87,8 +87,6 @@ pre {font-family: 'Roboto', sans-serif;}
 
 
 .card {border: 1px solid rgba(0,0,0,0.05); border-radius: 3px; padding: 5px 0px 8px;}
-.status {position: relative; max-width: 145px; margin: 0px auto; padding: 15px; text-align: center;}
-.status .img {background: #000 url(/img/invoicelion_inverted.png) center top / auto 102% no-repeat; border-radius: 100%; margin: 10px 0; opacity: 0.1; border-radius: 100%; border: 1px solid rgba(0,0,0,0.05); padding-bottom: 100%;}
 .default .card > div {padding: 30px 30px 20px 30px;}
 .default .card {background: white; max-width: 420px; margin: 0 auto; position: relative; z-index: 1;}
 
@@ -111,16 +109,18 @@ div + p {padding-top: 15px;}
 
 
 
-
-.col50 {width: calc(47.5% - 2px); float: left; margin-bottom: 40px;}
-.col50 + .col50 {margin-left: 5%;}
+.row {display: flex;}
+.col50 {width: calc(47.5% - 2px); display: flex; margin-bottom: 40px;}
 @media (max-width: 800px) {
-    .col50 {float: none!important; width: auto;}
-    .col50 + .col50 {margin-left: 0%;}
-    .card {border: 0px solid rgba(0,0,0,0.05); border-radius: 0px; padding: 0px;}
+    .col50 {width: auto;}
+    .card {border: 0px solid rgba(0,0,0,0.05); padding: 0px;}
     .card > div {padding: 0 0 10px;}
 }
-
+@media (max-width: 500px) {
+    .card {border-radius: 0;}
+    .default .card > div {padding: 30px 20px 20px 20px;}
+    .default .card {max-width: 100%;}
+}
 
 
 
