--- a/pages/settings/invoice/view(admin).phtml
+++ b/pages/settings/invoice/view(admin).phtml
@@ -33,6 +33,10 @@
         <dd><?php e(substr($data['tenants']['invoice_template']?:'-',0,100));?>...</dd>
     </dl>
     <dl>
+        <dt>Invoice line template</dt>
+        <dd><?php e(substr($data['tenants']['invoiceline_template']?:'-',0,100));?>...</dd>
+    </dl>
+    <dl>
         <dt>Invoice page number</dt>
         <dd><?php e(substr($data['tenants']['invoice_page_number']?:'-',0,100));?>...</dd>
     </dl>
