--- a/web/css/default.css
+++ b/web/css/default.css
@@ -222,7 +222,7 @@ td span {
     text-overflow: ellipsis;
 }
 tr:last-child {border-bottom: 0;}
-
+thead tr:last-child {border-bottom: 1px solid rgba(0,0,0,0.05);}
 
 @media (max-width: 800px) {
     table.responsive {position: relative;}
