--- a/pages/subscriptionperiods/view(admin).phtml
+++ b/pages/subscriptionperiods/view(admin).phtml
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h3><a href="/">Home</a> / <a href="subscriptionperiods">Subscription months</a></h3>
+  <h3><a href="/">Home</a> / <a href="subscriptionperiods">Subscription periods</a></h3>
   <h1><?php e($data['subscriptionperiods']['name']);?></h1>
 </div>
 <div>
