--- a/pages/invoices/view(admin).phtml
+++ b/pages/invoices/view(admin).phtml
@@ -79,6 +79,9 @@
 	<?php if(!$data['invoices']['sent']) { ?>
 		<a class="btn btn-primary" href="invoices/send/<?php e($id); ?>">Send</a>
 	<?php } ?>
+	<?php if(!$data['invoices']['paid']) { ?>
+		<a class="btn btn-default" href="invoices/pay/<?php e($id); ?>">Set as paid</a>
+	<?php } ?>
 	<a class="btn btn-<?php $data['invoices']['sent'] ? e('primary') : e('default'); ?>" href="invoices/download/<?php e($id); ?>">Download</a>
 	<?php if($data['invoices']['sent'] && (!$data['invoices']['paid'] || $data['invoices']['reminder1'] || $data['invoices']['reminder2'])) { ?>
 		<a class="btn btn-default" href="invoices/download/<?php e($id); ?>/1">Download 1st Reminder</a>
