--- a/pages/invoices/edit(admin).phtml
+++ b/pages/invoices/edit(admin).phtml
@@ -1,7 +1,7 @@
 <?php Buffer::set('title','Edit invoice'); ?>
 <div class="page-header">
 	<h3><a href="/">Home</a> / <a href="invoices">Invoices</a></h3>
-  	<h1>Pay invoice</h1>
+  	<h1>Edit invoice</h1>
 </div>
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
