--- a/pages/subscriptions/view(admin).phtml
+++ b/pages/subscriptions/view(admin).phtml
@@ -94,6 +94,7 @@
 <p>
 	<a class="btn btn-danger pull-right" href="subscriptions/delete/<?php e($id); ?>">Delete</a>
 	<a class="btn btn-primary" href="subscriptions/edit/<?php e($id); ?>">Edit</a>
+	<a class="btn btn-default" href="subscriptionperiods/addnextperiod">Add next period</a>
 </p>
 
 
