--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -20,6 +20,40 @@
         </div>
     <?php } ?>
 
+    <?php if(isset($uninvoiced_subscriptions[0])) { ?>
+        <div class="col50">  
+            <table>
+                <tr>
+                    <th class="name">Subscriptions without invoice</th>
+                    <th class="money"></th>
+                </tr>
+                <?php foreach ($uninvoiced_hours as $row): ?>
+                    <tr class="hover" onclick="window.location.href='subscriptions/view/<?php e($row['subscriptions']['id']);?>';">
+                        <td class="name"><span><?php e($row['subscriptions']['name']); ?></span></td>
+                        <td class="money"><span><?php e($row['subscriptions']['fee']); ?></span></td>
+                    </tr>
+                <?php endforeach; ?>
+            </table>
+        </div>
+    <?php } ?>
+
+    <?php if(isset($uninvoiced_hours[0])) { ?>
+        <div class="col50">  
+            <table>
+                <tr>
+                    <th class="name">Deliveries without invoice</th>
+                    <th class="money"></th>
+                </tr>
+                <?php foreach ($uninvoiced_hours as $row): ?>
+                    <tr class="hover" onclick="window.location.href='deliveries/view/<?php e($row['deliveries']['id']);?>';">
+                        <td class="name"><span><?php e($row['deliveries']['name']); ?></span></td>
+                        <td class="money"><span><?php e($row['deliveries']['subtotal']); ?></span></td>
+                    </tr>
+                <?php endforeach; ?>
+            </table>
+        </div>
+    <?php } ?>
+
     <?php if(isset($erronous_subscriptions[0])) { ?>
         <div class="col50">  
             <?php if(isset($erronous_subscriptions[0])) { ?>
