--- a/web/css/fonts.css
+++ b/web/css/fonts.css
@@ -19,6 +19,34 @@
          url('/fonts/roboto-v18-latin-300italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 
+  /* roboto-regular - latin */
+  @font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/fonts/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Roboto'), local('Roboto-Regular'),
+        url('/fonts/roboto-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+        url('/fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+        url('/fonts/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('/fonts/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  }
+
+  /* roboto-italic - latin */
+  @font-face {
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 400;
+    src: url('/fonts/roboto-v18-latin-italic.eot'); /* IE9 Compat Modes */
+    src: local('Roboto Italic'), local('Roboto-Italic'),
+        url('/fonts/roboto-v18-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/fonts/roboto-v18-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+        url('/fonts/roboto-v18-latin-italic.woff') format('woff'), /* Modern Browsers */
+        url('/fonts/roboto-v18-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('/fonts/roboto-v18-latin-italic.svg#Roboto') format('svg'); /* Legacy iOS */
+  }
+
   /* roboto-700 - latin */
   @font-face {
     font-family: 'Roboto';
