--- a/templates/default.phtml
+++ b/templates/default.phtml
@@ -25,7 +25,7 @@
           </div>
         <?php endforeach; ?>
 
-        <a href="/" id="branding"><img src="/img/invoicelion_inverted.png" /><span>InvoiceLion</span></a>
+        <a href="/" id="branding"><img src="/img/invoicelion_reversed.svg" /><span>InvoiceLion</span></a>
         <div class="card">
           <div>
             <?php Buffer::get('html');?>
