--- a/web/css/default.css
+++ b/web/css/default.css
@@ -54,7 +54,7 @@ h2 {font-size: 30px; margin-bottom: 30px; line-height: 1em; font-weight: 900; le
 h3 {font-size: 14px; margin-bottom: 5px; line-height: 1.2em; font-weight: 700;}
 * + h3 {margin-top: 30px;}
 * + h2 {margin-top: 60px;}
-.btn-primary, .btn-danger, .btn-default {display: inline-block; background: #18b663; color: white!important; padding: 10px 15px; font-weight: 700; font-size: 12px; line-height: 1.5em; border: 1px solid #18b663; text-transform: uppercase; border-radius: 3px; text-decoration: none; cursor: pointer;}
+.btn-primary, .btn-danger, .btn-default {margin-right: 10px; display: inline-block; background: #18b663; color: white!important; padding: 10px 15px; font-weight: 700; font-size: 12px; line-height: 1.5em; border: 1px solid #18b663; text-transform: uppercase; border-radius: 3px; text-decoration: none; cursor: pointer;}
 .btn-default, .btn-danger {background: white; color: #18b663!important;}
 h3 a {text-decoration: none;}
 .pull-right {float: right;}
@@ -274,7 +274,7 @@ body.iOS .icons {
 /* set colors */
 body {color: gray;}
 .default .content::before {background: #333;}
-th, .main > div h3, .main > div h3 a, dt {font-style: italic; color: silver; font-weight: normal;}
+th, .main > div h3, .main > div h3 a, dt, .main > div dt a {font-style: italic; color: silver; font-weight: normal;}
 h1 {font-weight: normal; color: #444; font-weight: 700}
 input, select, textarea {color: #444;}
 h1:after {background: transparent;}
