--- a/web/css/default.css
+++ b/web/css/default.css
@@ -81,7 +81,7 @@ pre {font-family: 'Roboto', sans-serif;}
 
 
 .card {border: 1px solid rgba(0,0,0,0.05); border-radius: 3px; padding: 5px 0px 8px;}
-.default .card > div {padding: 30px 30px 20px 30px;}
+.default .card > div {padding: 30px 30px 20px 30px; border: 0;}
 .default .card {background: white; max-width: 420px; margin: 0 auto; position: relative; z-index: 1;}
 
 
