--- a/pages/invoices/view(admin).phtml
+++ b/pages/invoices/view(admin).phtml
@@ -77,7 +77,7 @@
 
 <p>
 	<?php if(!$data['invoices']['sent']) { ?>
-		<a class="btn btn-primary" href="invoices/send/<?php e($id); ?>">Send</a>
+		<a class="btn btn-primary pull-right" href="invoices/send/<?php e($id); ?>">Send</a>
 	<?php } ?>
 	<a class="btn btn-default" href="invoices/edit/<?php e($id); ?>">Edit</a>
 	<a class="btn btn-<?php $data['invoices']['sent'] ? e('primary') : e('default'); ?>" href="invoices/download/<?php e($id); ?>">Download</a>
