--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -31,7 +31,7 @@
       <div class="icons">
         <div>
           <a href="/" id="branding" title="InvoiceLion"><span></span></a>
-          <a href="/" <?php if(Router::getUrl()=='/index') e('class=active'); ?> title="Dashboard">
+          <a href="/" <?php if(strlen(Router::getRequest())<3) e('class=active'); ?> title="Dashboard">
             <div class="img" style="background-image: url(/img/icon.svg);"></div>
             <div class="img" style="background-image: url(/img/icon-white.svg);"></div>
             <span>Dashboard</span>
