--- a/web/css/default.css
+++ b/web/css/default.css
@@ -58,7 +58,7 @@ h3 {font-size: 14px; margin-bottom: 5px; line-height: 1.2em; font-weight: 700;}
 .btn-default, .btn-danger {background: white; color: #18b663!important;}
 h3 a {text-decoration: none;}
 .pull-right {float: right;}
-.pull-right .btn-primary, .pull-right .btn-danger, .pull-right .btn-default,
+h1 a.btn-primary, .pull-right .btn-primary, .pull-right .btn-danger, .pull-right .btn-default,
 .btn-primary.pull-right, .btn-danger.pull-right, .btn-default.pull-right {margin-right: 0px; margin-left: 10px;}
 
 h1 .btn-primary {font-size: 12px; line-height: 1.5em; margin-top: 5px; float: right; }
@@ -135,7 +135,7 @@ div + p {padding-top: 15px;}
     .icons > div a .img + .img {width: 25px;}
     .icons > div a span {font-size: 14px; display: inline-block; padding-left: 45px;}
     .icons > div a#branding {display: block; background: #333; margin: 0 0 25px; padding: 0; border-bottom: 1px solid rgba(0,0,0,0.05);}
-    .icons > div a#branding > span {display: block; height: 140px; background: transparent url(/img/invoicelion_reversed.svg) 40px center / auto 60% no-repeat; opacity: 0.4;}
+    .icons > div a#branding > span {display: block; height: 140px; background: transparent url(/img/invoicelion_reversed.svg) 40px center / auto 63% no-repeat; opacity: 0.4;}
     .onlydesktop, .icons div.bottom {display: block!important;}
     .icons div.bottom {position: absolute; bottom: 35px; width: 100%;}
     .onlymobile {display: none!important;}
