--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -77,6 +77,14 @@
           </a>
 
           <div class="bottom">
+
+            <?php if ($_SESSION['user']['superadmin']) { ?>
+              <a href="users/" title="Users">
+                <div class="img" style="background-image: url(/img/user-friends.svg);"></div>
+                <div class="img" style="background-image: url(/img/user-friends-white.svg);"></div>
+                <span>Users</span>
+              </a> 
+            <?php } ?>
             <?php $username = isset($_SESSION['user']) ? $_SESSION['user']['username'] : false?>
             <a href="users/view/<?php e($_SESSION['user']['id']); ?>" <?php if(substr(Router::getRequest(),0,6)==='/users') e('class=active'); ?> title="User">
               <div class="img" style="background-image: url(/img/user.svg);"></div>
