--- a/pages/subscriptionperiods/delete(admin).phtml
+++ b/pages/subscriptionperiods/delete(admin).phtml
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Delete abonnementperiode</h1>
+  <h1>Delete subscription period</h1>
 </div>
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
