--- a/pages/subscriptionperiods/addnextperiod(admin).phtml
+++ b/pages/subscriptionperiods/addnextperiod(admin).phtml
@@ -5,6 +5,6 @@
 <form method="post">
   <p>Are you sure?</p>
 	<button class="btn btn-danger pull-right" type="submit">Yes</button>
-	<a class="btn btn-primary" href="subscriptionperiods/edit/<?php e($id); ?>">No</a>
+	<a class="btn btn-primary" href="subscriptions/view/<?php e($id); ?>">No</a>
 	<?php Session::getCsrfInput(); ?>
 </form>
