--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -149,6 +149,6 @@
     <?php } ?>
 
     <?php if(!$i) {?>
-        Well done! You have no items that require your attention.
+        <p>Well done! You have no items that require your attention.</p>
     <?php } ?>
 </div>
