--- a/pages/index(admin).phtml
+++ b/pages/index(admin).phtml
@@ -150,5 +150,5 @@
 
 </div>
     <?php if(!$i) {?>
-        <p>Well done! You have no items that require your attention.</p>
+        <p class="lead">Well done! You have no items that require your attention.</p>
     <?php } ?>
