--- a/web/css/default.css
+++ b/web/css/default.css
@@ -37,7 +37,7 @@ a {background: transparent;}
 .icons {display: block;}
 a {cursor: pointer;}
 p, ul, ol, .form {margin-bottom: 1.5em;}
-h1 + p, p.lead {font-size: 132%; line-height: 1.5em; max-width: 700px;}
+h1 + p, p.lead {font-size: 132%; line-height: 1.5em; max-width: 700px; padding-top: 0;}
 .bold {font-weight: bold;}
 .text-center {text-align: center;}
 h1 {font-size: 45px; margin-bottom: 20px; line-height: 1em; font-weight: 900; letter-spacing: 0.5px;}
