--- a/pages/auth/register(default).phtml
+++ b/pages/auth/register(default).phtml
@@ -9,12 +9,13 @@
 		<span class="help-block"><?php if (isset($errors['username'])) e($errors['username']); ?></span>
 	</div>
 
-    <div class="form-group <?php e(isset($errors['username'])?'has-error':''); ?>">
-		<label class="control-label" for="username">Country</label>
+    <div class="form-group <?php e(isset($errors['country'])?'has-error':''); ?>">
+		<label class="control-label" for="country">Country</label>
 		<select class="form-control" name="country">
             <option>Netherlands</option>
         </select>
-		<span class="help-block"><?php if (isset($errors['username'])) e($errors['username']); ?></span>
+		<span class="help-block"><?php if (isset($errors['country'])) e($errors['country']); ?></span>
+        <div><a href="https://github.com/Usecue/InvoiceLion">Why is my country not listed?</a></div>
 	</div>
     <div class="form-group">
         <button class="btn btn-primary" type="submit">Submit</button>
