--- a/pages/auth/register(default).phtml
+++ b/pages/auth/register(default).phtml
@@ -15,7 +15,7 @@
             <option>Netherlands</option>
         </select>
 		<span class="help-block"><?php if (isset($errors['country'])) e($errors['country']); ?></span>
-        <div style="padding-top: 5px;"><a href="https://github.com/Usecue/InvoiceLion">Why is my country not listed?</a></div>
+        <div style="padding-top: 5px;"><a href="https://github.com/Usecue/InvoiceLion/wiki/Country-support">Why is my country not listed?</a></div>
 	</div>
     <div class="form-group">
         <button class="btn btn-primary" type="submit">Submit</button>
